# powerplai

./: .env.example  .env.production.example  .gitignore  DATA_DICTIONARY.md  PROMPT.md  README.md  ROADMAP.md  docker-compose.prod.yml  docker-compose.yml  package-lock.json  pyproject.toml  railway.json
.claude/: settings.local.json
.github/workflows/: deploy-pages.yml  keep-alive.yml
backend/scripts/: ingest_all_seasons.py  ingest_data.py  ingest_sync.py
backend/src/: config.py
backend/src/agents/: copilot.py  daily_audit.py  edge_finder.py  model_evaluation.py  odds_value.py  parlay_tracker.py  playoffs.py  prediction_audit.py  predictions.py  rag.py  regression_tracker.py
backend/src/api/: main.py
backend/src/db/: database.py  migrations.py  models.py
backend/src/evals/: eval_framework.py
backend/src/ingestion/: espn_injuries.py  games.py  injuries.py  moneypuck.py  nhl_api.py  olympics.py  roster_sync.py  salary_cap.py  scheduler.py  startup_updates.py  team_goalie_stats.py
backend/src/pipeline/: __init__.py  config.py  incremental.py  orchestrator.py  validation.py
backend/tests/: test_api.py
data/: ingestion_progress.json  olympic_stats.csv  salaries_2025_26.csv
docker/: Dockerfile.backend  Dockerfile.backend.prod  init.sql
frontend/: Dockerfile  Dockerfile.dev  next.config.js  next.config.static.js  package-lock.json  package.json  railway.toml  tailwind.config.ts
frontend/src/app/: globals.css  layout.tsx  page.tsx
frontend/src/components/: AccuracyBadge.tsx  LoadingDots.tsx  Logo.tsx  ModelPerformanceModal.tsx  ParlayTracker.tsx  (+2 more)
(+19 files in other folders)
